# nutrino_pico_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
